2007-04-26  Tomas Frydrych  <tf@openedhand.com>

	* libmb/mbexp.c: 
	Added some (char*) casts to silence signedness warnings.
	(_clip_some_text):
	Speeded up pango branch by running the rendering pipeline
	only once.

2007-04-23  Matthew Allum  <mallum@openedhand.com>

	* configure.ac:
	Export CHECK_CFLAGS

2006-11-17  Matthew Allum  <mallum@openedhand.com>

	* libmb/Makefile.am:
	Fix typo switching XSET_CFLAGS <-> XSET_LIBS

2006-10-16  Matthew Allum  <mallum@openedhand.com>

	* libmb/mbexp.c: (mb_font_get_txt_width), (_render_some_text):
	Use logical rather than ink rects for pango extents. 
	( maemo #41691 )    

2006-08-30  Matthew Allum  <mallum@openedhand.com>

	* libmb/mbtray.c: (mb_tray_handle_xevent):
	Only handle exposes for tray window. Fixes issues
	when used with GTK.

2006-08-04  1.9 Released.

2006-08-04  Matthew Allum  <mallum@openedhand.com>

	* NEWS:
	* configure.ac:
	* libmb/Makefile.am:
	Bump up to 1.9

2006-07-27  Matthew Allum  <mallum@openedhand.com>

	* libmb/mbutil.c:
	Fix mb_want_warning(s) typo

2006-07-26  Matthew Allum  <mallum@openedhand.com>

	* libmb/mbdotdesktop.c:
	* libmb/mbexp.c:
	* libmb/mbmenu.c:
	* libmb/mbpixbuf.c:
	* libmb/mbtray.c:
	* libmb/mbutil.c:
	* libmb/mbutil.h:
	Remove various non-critical stderr warnings.
	Make old behaviour reproduce-able via setting MB_WARNINGS
	env var.

2006-06-09  Matthew Allum  <mallum@openedhand.com>

	* libmb/mbtray.c: (_init_docking):
	Set PID hint correctly.

2006-03-07  Matthew Allum  <mallum@openedhand.com>

	* configure.ac:
	* libmb/Makefile.am:
	Bump up version to 1.8

2006-02-07  Matthew Allum  <mallum@openedhand.com>

	* configure.ac:
	pkg-config file generation tweaks.
	* libmb/mbtray.c:
	fix a warning.

2006-01-26  Matthew Allum  <mallum@openedhand.com>

	* libmb/Makefile.am:
	* libmb/mb.h:
	* libmb/mbmenu.c: (mb_menu_check_scroll_button):
	* libmb/mbtray.c:
	Fix xsettings never actually getting used :(
	A Little reformatting.

2006-01-24  Matthew Allum  <mallum@openedhand.com>
