@@ -1,3 +1,8 @@
+2008-06-06  Marcin Juszkiewicz  <hrw@openedhand.com>
+
+	* libmb/mbexp.c:  (mb_util_next_utf8_char):
+	Fixed length calculation for >8bit chars (CJKV).
+
 2007-04-26  Tomas Frydrych  <tf@openedhand.com>
 
 	* libmb/mbexp.c: 
